test/openspeedtest/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openspeedtest
spec:
  selector:
    matchLabels:
      app: openspeedtest
  template:
    metadata:
      labels:
        app: openspeedtest
    spec:
      containers:
      - name: openspeedtest
        image: docker.io/openspeedtest/latest@sha256:f6de9a7aa26d099f4e4ed6168a137883b144777e2feab8b73acade298713a603
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: 10Mi
          limits:
            memory: 1000Mi
---
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
spec:
  selector:
    app: openspeedtest
  ports:
  - name: http
    port: 3000
