test/openspeedtest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openspeedtest
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: AUTOMATIC_REPLACE
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  ingressClassName: nginx
  tls:
  - secretName: AUTOMATIC_REPLACE
  rules:
  - host: AUTOMATIC_REPLACE
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: openspeedtest
            port:
              name: http
